--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -7,16 +7,35 @@
     margin: 10px;
     width: 230px;
     height: 290px;
-    border: 1px solid #ccc;
+    border: 1px solid #191a1f;
     border-radius: 8px;
+    
 }
 
-.card img {
+.imgContainer{
+    position: relative;
     width: 200px;
     height: 120px;
-    object-fit: cover;
-    margin-bottom: 10px;
 }
+
+.imgContainer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(56, 49, 49, 0.369); 
+
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
 
 .card h3,
 .card p {
@@ -24,4 +43,6 @@
     text-decoration: none;
     color: inherit;
     text-decoration: none;
+    font-size: 1.2rem;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
