--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -1,23 +1,5 @@
-/* .cardsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
 
-.link {
-    color: inherit;
-    text-decoration: none;
-}
-
-@media (max-width: 960px) {
-    .cardsContainer {
-        flex-direction: column;
-        align-items: center;
-    }
-}
- */
-
- .cardsContainer {
+.cardsContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -32,9 +14,10 @@
     justify-content: space-between;
     padding: 10px;
     text-decoration: none;
-    color: inherit;
+    color: #191a1f;
 }
 
 .link :hover {
-  background-color: #f5f5f5;
+    background-color: #191a1f;
+    color: aliceblue;
 }
