--- a/client/src/components/CountryDetail/CountryDetail.module.css
+++ b/client/src/components/CountryDetail/CountryDetail.module.css
@@ -1,34 +1,81 @@
 .container {
-    margin: 20px;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #e2f2ef;
     padding: 20px;
-    background-color: #f5f5f5;
+}
+
+.mainContainer {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: #001213;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.detailsContainer {
+    text-align: center;
+    margin-bottom: 0px;
 }
 
 .countryName {
-    color: #222;
+    font-size: 24px;
+    color: #f8f8f8;
+    margin-bottom: 10px;
 }
 
 .flag {
-    width: 200px;
+    width: 400px;
     height: auto;
+    margin-bottom: 5px;
+}
+
+.infoContainer {
+    display: flex;
+    width: 70%;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-around;
+    background-color: #75787e;
+    border-radius: 8px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+}
+.countryContainer {
+    text-align: left;
+}
+
+.activitiesContainer {
+    text-align: left;
+    
+}
+
+.activitiesContainer > div {
+    margin-bottom: 10px;
 }
 
 .backButton {
-    display: inline-block;
+    margin-top: 20px;
 }
 
-.backButton button {
+button {
+    background-color: #333333;
+    color: #ffffff;
     padding: 10px 20px;
-    background-color: #666;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-    border-width: 0px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-.backButton button:hover {
-    background-color: #999;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+.loadingImage {
+    max-width: 100px;
+    height: auto;
 }
