--- a/client/src/components/Error/ErrorPage.module.css
+++ b/client/src/components/Error/ErrorPage.module.css
@@ -3,10 +3,15 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url('../images/mapaoscuro-claro.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .errorText {
-    font-size: 24px;
-    color: red;
+    font-size: 60px;
+    color: rgba(255, 0, 0, 0.709);
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
